se adapta para el correcto uso del GK

--- a/TP5/TP5.ipynb
+++ b/TP5/TP5.ipynb
@@ -57,7 +57,7 @@
       },
       "source": [
         "## Formateando los datos\n",
-        "En caso, vamos a utilizar un nuevo paquete llamado geopandas para crear mapas.\n",
+        "En este caso, vamos a utilizar un nuevo paquete llamado geopandas para crear mapas.\n",
         "\n",
         "Los mapas son bastante complicados... \n",
         "\n",
@@ -464,6 +464,16 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "T_tkyORhnq7R"
@@ -494,7 +504,7 @@
       "outputs": [],
       "source": [
         "# https://data.buenosaires.gob.ar/dataset/barrios\n",
-        "barrios = pd.read_csv(\"https://datasets-humai.s3.amazonaws.com/datasets/barrios.csv\", encoding='latin1')"
+        "barrios = pd.read_csv(\"/content/drive/MyDrive/IMD/TP5/barrios.csv\", encoding='latin1', delimiter=';')"
       ]
     },
     {
@@ -704,86 +714,102 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "bomberos = pd.read_csv(\"https://datasets-humai.s3.amazonaws.com/datasets/bomberos.csv\")\n",
-        "bomberos.head(3)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "dlHP3Jkdve-a"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "bomberos = pd.read_csv(\"/content/drive/MyDrive/IMD/TP5/bomberos.csv\")\n",
+        "bomberos.head(3)"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "bomberos = from_x_y(bomberos, \"long\",\"lat\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "QF9JaTx_vfNA"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "bomberos_gdf = gpd.GeoDataFrame(bomberos, geometry=gpd.points_from_xy(bomberos['long'], bomberos['lat']))"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "CdXTwZFSvkjf"
+      },
+      "outputs": [],
       "source": [
         "fig, ax = plt.subplots()\n",
         "ax.set_aspect('equal')\n",
         "barrios.plot(ax=ax, color='white', edgecolor='black')\n",
         "bomberos.plot(ax=ax, marker='o', color='red', markersize=25)\n",
         "plt.show();"
-      ],
-      "metadata": {
-        "id": "CdXTwZFSvkjf"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "7qVvl5mhvp5q"
+      },
       "source": [
         "Imagínese que se desea bacer el siguiente análisis: suponiendo que cada delegación de bomberos tiene un alcance de hasta 1.5 km (ACLARACIÓN: este valor no se basa en la realidad) se desean obtener los lugares abarcados y los no abarcados por el servicio.\n",
         "\n",
         "Para ello primero tendremos que convertir la proyección a una proyección que nos permita trabajar en metros y no en grados. Para eso usaremos la proyección  Gauss-Krueger Buenos Aires. \n",
         "\n",
         "Convertimos nuestros datasets a GKBA"
-      ],
-      "metadata": {
-        "id": "7qVvl5mhvp5q"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "barrios_gkba = barrios.to_crs(crs = \"+proj=tmerc +lat_0=-34.629269 +lon_0=-58.4633 +k=0.9999980000000001 +x_0=100000 +y_0=100000 +ellps=intl +units=m +no_defs\")\n",
-        "bomberos_gkba = bomberos.to_crs(crs = \"+proj=tmerc +lat_0=-34.629269 +lon_0=-58.4633 +k=0.9999980000000001 +x_0=100000 +y_0=100000 +ellps=intl +units=m +no_defs\")"
-      ],
+        "barrios.set_crs(\"EPSG:4326\", inplace=True)\n",
+        "bomberos_gdf.set_crs(\"EPSG:4326\", inplace=True)\n",
+        "print(\"CRS asignado\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "u3jCsuVEv3Bp"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Transformar el CRS de 'barrios'\n",
+        "barrios_gkba = barrios.to_crs(crs=\"+proj=tmerc +lat_0=-34.629269 +lon_0=-58.4633 +k=0.9999980000000001 +x_0=100000 +y_0=100000 +ellps=intl +units=m +no_defs\")\n",
+        "print(\"Transformación de CRS para barrios completada.\")\n",
+        "\n",
+        "# Transformar el CRS de 'bomberos'\n",
+        "bomberos_gkba = bomberos_gdf.to_crs(crs=\"+proj=tmerc +lat_0=-34.629269 +lon_0=-58.4633 +k=0.9999980000000001 +x_0=100000 +y_0=100000 +ellps=intl +units=m +no_defs\")\n",
+        "print(\"Transformación de CRS para bomberos completada.\")"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "¿Qué pasó ahora con la geometría?"
-      ],
       "metadata": {
         "id": "7s4f-8ipv_Cy"
-      }
+      },
+      "source": [
+        "¿Qué pasó ahora con la geometría?"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "bomberos_gkba.head().geometry"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "0R-Xx8vLv8bJ"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "bomberos_gkba.head().geometry"
+      ]
     },
     {
       "cell_type": "code",
@@ -854,47 +880,50 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "s233TejuwVPj"
+      },
       "source": [
         "## Mapas interactivos\n",
         "En esta sección vamos a trabajar con mapas interactivos. Suelen ser buenos para armar aplicaciones y mostrar, a diferencia de los anteriores que son primordialmente analíticos.\n",
         "\n",
         "Acá se requieren otros paquetes"
-      ],
-      "metadata": {
-        "id": "s233TejuwVPj"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Z8TglmORwmUi"
+      },
+      "outputs": [],
       "source": [
         "!pip3 install folium\n",
         "import folium\n",
         "from folium import Choropleth, Circle, Marker\n",
         "from folium.plugins import HeatMap, MarkerCluster\n"
-      ],
-      "metadata": {
-        "id": "Z8TglmORwmUi"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "6EKpsTdZwrNh"
+      },
+      "outputs": [],
       "source": [
         "# Create a map\n",
         "m_1 = folium.Map(location=[42.32,-71.0589], tiles='openstreetmap', zoom_start=10)\n",
         "\n",
         "# Display the map\n",
         "m_1\n"
-      ],
-      "metadata": {
-        "id": "6EKpsTdZwrNh"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "uPpDo-guws8H"
+      },
       "source": [
         "Varios argumentos pueden ayudar a customizar la apareiencia del mapa:\n",
         "\n",
@@ -908,13 +937,15 @@
         "[Base de crímenes](https://drive.google.com/file/d/1AZaqiHmIA1J3zzjOdva5cf4Ao8tviCmN/view?usp=sharing)\n",
         "\n",
         "Ahora vamos a analizar nuevos datos, incorporandolos ya saben como:"
-      ],
-      "metadata": {
-        "id": "uPpDo-guws8H"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "tjNieaZKx2fP"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -938,24 +969,24 @@
         "\n",
         "# Print the first five rows of the table\n",
         "crimes.head()\n"
-      ],
-      "metadata": {
-        "id": "tjNieaZKx2fP"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "El próximo paso consiste en graficar puntos:"
-      ],
       "metadata": {
         "id": "sb86S01hyJud"
-      }
+      },
+      "source": [
+        "El próximo paso consiste en graficar puntos:"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "fLT3EwDsyMno"
+      },
+      "outputs": [],
       "source": [
         "daytime_robberies = crimes[((crimes.OFFENSE_CODE_GROUP == 'Robbery') & \\\n",
         "                            (crimes.HOUR.isin(range(9,18))))]\n",
@@ -968,24 +999,24 @@
         "\n",
         "# Display the map\n",
         "m_2\n"
-      ],
-      "metadata": {
-        "id": "fLT3EwDsyMno"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Y también se pueden utilizar algoritmos de clusterización o agrupamiento por distancia (ya veremos en detalle que es esto en un TP específico:"
-      ],
       "metadata": {
         "id": "M0E2BIUCySPC"
-      }
+      },
+      "source": [
+        "Y también se pueden utilizar algoritmos de clusterización o agrupamiento por distancia (ya veremos en detalle que es esto en un TP específico:"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "n_BmnIKOyZda"
+      },
+      "outputs": [],
       "source": [
         "import math\n",
         "# Create the map\n",
@@ -1000,24 +1031,24 @@
         "\n",
         "# Display the map\n",
         "m_3\n"
-      ],
-      "metadata": {
-        "id": "n_BmnIKOyZda"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "También es posible realizar mapas de calor, muy utilizados en epidemiología:"
-      ],
       "metadata": {
         "id": "o_wPtbr7y4YI"
-      }
+      },
+      "source": [
+        "También es posible realizar mapas de calor, muy utilizados en epidemiología:"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "0i3EmeG2y8kf"
+      },
+      "outputs": [],
       "source": [
         "# Create a base map\n",
         "m_5 = folium.Map(location=[42.32,-71.0589], tiles='cartodbpositron', zoom_start=12)\n",
@@ -1027,34 +1058,29 @@
         "\n",
         "# Display the map\n",
         "m_5"
-      ],
-      "metadata": {
-        "id": "0i3EmeG2y8kf"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "6W8idzrszH_f"
+      },
       "source": [
         "# Ejercicio\n",
         "A este punto ya analizaron muchas formas diferentes de trabajar con mapas.\n",
         "La propuesta es que lleven estos a la Provincia de Buenos Aires. Si tienen que inventarse bases de datos con latitud y longitud de distintos eventos (por ejemplo casos de dengue) ya saben que chatGPT es una herramienta bastante creativa ;) "
-      ],
-      "metadata": {
-        "id": "6W8idzrszH_f"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# en sus manos"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "nhNwcbUtza22"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# en sus manos"
+      ]
     }
   ],
   "metadata": {
